Refactor Lyrics Controller
