# apps/server/src/api/v1/songs/application/dtos/SongDTOs.ts
@@ -37,10 +37,3 @@ export interface SeparateSongStemsResponseDTO {
   message?: string;
   progress?: number;
 }
-
-export interface LyricsDTO {
-  language: string;
-  type: 'original' | 'transcription' | 'translation';
-  format: 'lrc' | 'ttml';
-  content: string;
-}
